[package]
name = "bench_neighbors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
f3l_core = { git = "https://github.com/Donvlouss/f3l.git" }
f3l_search_tree = { git = "https://github.com/Donvlouss/f3l.git" }
kdtree = "0.7.0"
kd-tree = "0.5.3"
rstar = "0.12.0"

ply-rs = "0.1.3"
criterion = "0.5.1"

[[bench]]
name = "search_tree"
harness = false